2010-10-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-do-file-attributes-with-stat)
	(tramp-do-directory-files-and-attributes-with-stat): Use "e0" in
	order to make stat results a float.  Patch by Andreas Schwab
	<schwab@linux-m68k.org>.
	(tramp-send-command): Unset $PS1 in a subshell, in order not to
	get several prompts when there are commands separated by ";".

	* tramp-util.el (tramp-advice-executable-find): Do not check for
	`tramp-fish-file-name-handler'.  Use
	`tramp-sh-handle-executable-find'.
	(tramp-advice-process-file): Do
	not check for `tramp-fish-file-name-handler'.
	(tramp-advice-call-process-region): Do not check for
	`tramp-fish-file-name-handler'.  Use
	`tramp-sh-handle-call-process-region.

2010-10-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-open-connection-setup-interactive-shell):
	Suppress expansion of tabs to spaces.  Reported by Dale Sedivec
	<dale@codefu.org>.

2010-10-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-sh-file-name-handler-alist): Use
	`tramp-handle-find-backup-file-name'.

2010-10-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-directory-files-and-attributes)
	(tramp-handle-file-exists-p, tramp-handle-file-newer-than-file-p):
	New defuns, taken from tramp-smb.el.
	(tramp-coding-system-change-eol-conversion)
	(tramp-set-process-query-on-exit-flag): Removed.

	* tramp-compat.el (top): Do not check for byte-compiler objects.
	(tramp-compat-coding-system-change-eol-conversion)
	(tramp-compat-set-process-query-on-exit-flag): New defuns, taken
	from tramp.el.

	* tramp-gvfs.el:
	* tramp-gw.el: Replace `tramp-set-process-query-on-exit-flag' by
	`tramp-compat-set-process-query-on-exit-flag'.

	* tramp-imap.el (tramp-imap-file-name-handler-alist): Use
	`tramp-handle-directory-files-and-attributes',
	`tramp-handle-file-exists-p' and
	`tramp-handle-file-newer-than-file-p'.
	(tramp-imap-handle-file-exists-p)