@@ -1,3 +1,8 @@
+2010-10-20  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-sh.el (tramp-send-command): Simplify last patch, and
+	restrict it to here documents.
+
 2010-10-19  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-sh.el (tramp-do-file-attributes-with-stat)
